--- a/shareWindow.html
+++ b/shareWindow.html
@@ -11,7 +11,7 @@
     <div class="ShareWindow">
         <img src="./assets/images/pair.svg" alt="Pair"/>
         <div class="ShareWindow__Container">
-          <button class="Button" onclick="test();">Share dekstop</button>
+          <button class="Button" onclick="test();">Share desktop</button>
           <button class="HButton">Don't share desktop</button>
         </div>
       </div>
